Fix font readability before banner loads - z-index fixed

--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -130,7 +130,7 @@ main {
     width: 100%;
     object-fit: cover;
     position: absolute;
-    z-index: -1;
+    z-index: 1;
 }
 
 .banner-text {
@@ -138,6 +138,7 @@ main {
     font-weight: 700;
     font-size: 300%;
     color: #eee;
+    z-index: 2;
 }
 
 .accommodations {
